--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
 </head>
 <body>
 
-  <h1>Beetroot (Beta Vulgaris)</h1>
+  <header>
+
+    <h1>Beetroot (Beta Vulgaris)</h1>
+
+    <nav>
+      <ol>
+        <li><a href="#common-varieties">Common Varieties</a></li>
+        <li><a href="#nutritional-information">Nutritional information</a></li>
+        <li><a href="#tags">Tags</a></li>
+      </ol>
+    </nav>
+
+  </header>
+
   
 </body>
 </html>
