created the figure and all elements inside

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
 
   </header>
 
-  
+  <main>
+
+    <article>
+
+      <figure>
+        <img src="images/beets.jpg" alt="">
+        <figcaption>
+          <p>A bundle of organic beets from a local farm food co-op program.</p>
+          <p><time>55 to 65 days</time>are needed from germination to harvest of the root.</p>
+        </figcaption>
+      </figure>
+
+  </main>
 </body>
 </html>
