--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
         <img src="images/beets.jpg" alt="">
         <figcaption>
           <p>A bundle of organic beets from a local farm food co-op program.</p>
-          <p><time>55 to 65 days</time>are needed from germination to harvest of the root.</p>
         </figcaption>
       </figure>
 
+      <p><time>55 to 65 days</time>are needed from germination to harvest of the root.</p>
+      <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either along or combined with any salad vegetable</p>
+      <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"fact, bears eat beets. Bears, beets, <i>"Battlestar Galactica"</i></q>.</p>
+      <blockquote><p>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</p><cite>–Chris Pratt</cite></blockquote>
+      
   </main>
 </body>
 </html>
