--- a/index.html
+++ b/index.html
@@ -50,16 +50,11 @@
 
     <h2 id="nutritional-information">Nutritional Information</h2>
     <dl>
-      <dt>Serving Size</dt>
-      <dd>100 g</dd>
-      <dt>Energy</dt>
-      <dd>180 kJ</dd>
-      <dt>Carbohydrates</dt>
-      <dd>9.96 g</dd>
-      <dt>Fat</dt>
-      <dd>0.18 g</dd>
-      <dt>Protein</dt>
-      <dd>1.68 g</dd>
+      <dt>Serving Size</dt><dd>100 g</dd>
+      <dt>Energy</dt><dd>180 kJ</dd>
+      <dt>Carbohydrates</dt><dd>9.96 g</dd>
+      <dt>Fat</dt><dd>0.18 g</dd>
+      <dt>Protein</dt><dd>1.68 g</dd>
     </dl>
 
   </main>
