fixed data in DL

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </figcaption>
       </figure>
 
-      <p><time>55 to 65 days</time>are needed from germination to harvest of the root.</p>
+      <p>55 to 65 days are needed from germination to harvest of the root.</p>
       <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either along or combined with any salad vegetable</p>
       <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>"fact, bears eat beets. Bears, beets, <i>"Battlestar Galactica"</i></q>.</p>
       <blockquote><p>I have some <em>weird</em> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will clean them out of their beets.</p><cite>–Chris Pratt</cite></blockquote>
@@ -50,11 +50,11 @@
 
     <h2 id="nutritional-information">Nutritional Information</h2>
     <dl>
-      <dt>Serving Size</dt><dd>100 g</dd>
-      <dt>Energy</dt><dd>180 kJ</dd>
-      <dt>Carbohydrates</dt><dd>9.96 g</dd>
-      <dt>Fat</dt><dd>0.18 g</dd>
-      <dt>Protein</dt><dd>1.68 g</dd>
+      <dt>Serving Size:</dt><dd><data value="100">100 g</data></dd>
+      <dt>Energy:</dt><dd><data value="180">180 kJ</data></dd>
+      <dt>Carbohydrates:</dt><dd><data value="9.96">9.96 g</data></dd>
+      <dt>Fat:</dt><dd><data value="0.18">0.18 g</data></dd>
+      <dt>Protein:</dt><dd><data vaue="1.68">1.68 g</data></dd>
     </dl>
 
   </main>
